--- a/main.css
+++ b/main.css
@@ -32,6 +32,7 @@
     box-shadow:  5px 5px 20px rgba(0, 0, 0, 0.384);
 }
 .card-main:hover{
+    transform: rotate(20deg);
    border-color: blue;
 }
 .main-div{
